examples/test/testpolicy19396.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19396
  namespace: namespace47
spec:
  podSelector:
    matchLabels:
      key15: value22
      key35: value29
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value44
          key1: value26
          key48: value48
      podSelector:
        matchLabels:
          key27: value23
